force-app/main/default/objects/Account_Financial_Snapshot__c/Account_Financial_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Account Financial Snapshot</label>
    <nameField>
        <displayFormat>AFS-{000000000}</displayFormat>
        <label>Account Financial Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Financial Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>