force-app/main/default/objects/Account_Financial_Snapshot__c/fields/Cash_Management__c.field-meta.xml
<CustomField>
    <fullName>Cash_Management__c</fullName>
    <formula>TtlNbrCashMgmtFinAccts__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Management</label>
    <type>Checkbox</type>
</CustomField>