force-app/main/default/objects/Account_Financial_Snapshot__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Financial Snapshots</relationshipLabel>
    <relationshipName>Account_Financial_Snapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>