force-app/main/default/objects/Account_Financial_Snapshot__c/fields/Relationship_Banking__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Banking__c</fullName>
    <formula>TtlNbrRelBankingFinAccts__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Banking</label>
    <type>Checkbox</type>
</CustomField>