force-app/main/default/objects/Account_Financial_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Snapshot Date</label>
    <type>Date</type>
</CustomField>