force-app/main/default/objects/Account_Financial_Snapshot__c/fields/Total_Deposit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit_Balance__c</fullName>
    <label>Total Deposit Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>