force-app/main/default/objects/Account_Financial_Snapshot__c/fields/Total_Loan_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Exposure__c</fullName>
    <label>Total Loan Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>