force-app/main/default/objects/Account_Financial_Snapshot__c/fields/Total_Number_Financial_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Financial_Accounts__c</fullName>
    <label>Total Number of Financial Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>