force-app/main/default/objects/Account_Financial_Snapshot__c/fields/TtlNbrCashMgmtFinAccts__c.field-meta.xml
<CustomField>
    <fullName>TtlNbrCashMgmtFinAccts__c</fullName>
    <label>TtlNbrCashMgmtFinAccts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>