force-app/main/default/objects/Account_Financial_Snapshot__c/fields/TtlNbrRelBankingFinAccts__c.field-meta.xml
<CustomField>
    <fullName>TtlNbrRelBankingFinAccts__c</fullName>
    <label>TtlNbrRelBankingFinAccts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>