force-app/main/default/objects/Account_Financial_Snapshot__c/fields/Weighted_Average_Deposit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Average_Deposit_Rate__c</fullName>
    <label>Weighted Average Deposit Rate</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>