force-app/main/default/objects/Account_Financial_Snapshot__c/fields/Weighted_Average_Loan_Rate__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Average_Loan_Rate__c</fullName>
    <label>Weighted Average Loan Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>